--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@casl/ability": "^6.3.1",
     "@casl/prisma": "^1.3.0",
     "@nestjs/apollo": "^10.1.0",
-    "@nestjs/common": "^9.1.2",
+    "@nestjs/common": "^9.1.4",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.1.2",
-    "@nestjs/graphql": "^10.1.2",
+    "@nestjs/core": "^9.1.4",
+    "@nestjs/graphql": "^10.1.3",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.1.2",
@@ -39,6 +39,7 @@
     "class-validator": "^0.13.2",
     "graphql": "^16.6.0",
     "graphql-type-json": "^0.3.2",
+    "graphql-ws": "^5.11.2",
     "nestjs-i18n": "^9.2.0",
     "passport-jwt": "^4.0.0",
     "prisma-graphql-type-decimal": "^2.0.4",
