--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@casl/ability": "^6.3.1",
     "@casl/prisma": "^1.3.0",
+    "@nestjs-modules/mailer": "^1.6.2",
     "@nestjs/apollo": "^10.1.0",
     "@nestjs/common": "^9.1.2",
     "@nestjs/config": "^2.2.0",
@@ -39,7 +40,9 @@
     "class-validator": "^0.13.2",
     "graphql": "^16.6.0",
     "graphql-type-json": "^0.3.2",
+    "handlebars": "^4.7.7",
     "nestjs-i18n": "^9.2.0",
+    "nodemailer": "^6.8.0",
     "passport-jwt": "^4.0.0",
     "prisma-graphql-type-decimal": "^2.0.4",
     "reflect-metadata": "^0.1.13",
@@ -54,6 +57,7 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.62",
+    "@types/nodemailer": "^6.4.6",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
