--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "crypto": "^1.0.1",
     "graphql": "^16.6.0",
     "graphql-type-json": "^0.3.2",
     "handlebars": "^4.7.7",
