--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "handlebars": "^4.7.7",
     "nestjs-i18n": "^9.2.0",
     "nodemailer": "^6.8.0",
+    "passport-google-id-token": "^0.4.7",
     "passport-google-oauth20": "^2.0.0",
     "passport-google-token": "^0.1.2",
     "passport-jwt": "^4.0.0",
